# rust_in_peace

./: Cargo.toml  NOTES.md  README.md  rust-toolchain.toml  slides.html  slides.md
.cargo/: config.toml
src/: config.rs  control.rs  events.rs  input.rs  main.rs  messages.rs  motor.rs  motor_control.rs  peripherals.rs  ps2_input.rs  servo_control.rs  servo_controller.rs  tank_drive_controller.rs  utils.rs
src/drivers/: motor_control.rs
src/hardware/: mod.rs  peripherals.rs  tank_drive_controller.rs
src/tasks/: controller_task.rs  motor_task.rs
