[package]
name = "rust_in_peace"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
    "binary-info",
] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
tb6612fng = "1.0.0"

pscontroller-rs = { path = "pscontroller-rs" }

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 'z'
lto = "fat"
codegen-units = 1
debug = true
